fix: rename customer name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     </header>
     <hr>
     <hr>
-    
     <main>
         <div>
             <h1>Ice-cream shop</h1>
@@ -86,7 +85,7 @@
                 </article>
                 <hr />
                 <article>
-                    <h3>Stunade</h3>
+                    <h3>Tsunade</h3>
                     <img src="https://gamek.mediacdn.vn/thumb_w/640/133514250583805952/2020/2/20/anh-2-1582214631982184673655.png"
                         alt="Stunade" />
                     <p>"Mango ice cream is a tropical delight! The fruity flavor is perfect for summer."</p>
